--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <!-- Hero START -->
                             <div class="hero">
                                 <div class="container">
-                                    <img src="https://static.wikia.nocookie.net/bocchi-the-rock/images/0/08/Bocchi_the_Rock%21_Character_Key_Visual_Collection.png/revision/latest/scale-to-width-down/670?cb=20220531122623" alt="">
+                                    <img src="Assets\img\Hero\Bocchi_the_Rock%21_Character_Key_Visual_Collection.webp" alt="">
                                     <p>Hello and welcome to Bocchi the Rock! Wiki! A wiki dedicated to everything about the anime and manga series, Bocchi the Rock! that anyone can edit. Please help us by creating or editing any of our articles!</p>
                                     <hr color="white">
 
