--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                 <ul>
                     <li>
                         <a href="" class="judul">
-                            <img src="Assets\img\Hero\Bocchi_the_Rock%21_Character_Key_Visual_Collection.webp" alt="">
-                            <!-- <img src="https://static.wikia.nocookie.net/bocchi-the-rock/images/e/e6/Site-logo.png/revision/latest?cb=20220531140240" alt=""> -->
+                            <img src="Assets/img/Navbar/Site-logo.webp" alt="">
                         </a>
                     </li>
 
@@ -148,7 +147,7 @@
                         <!-- Hero START -->
                             <div class="hero">
                                 <div class="container">
-                                    <img src="Assets/img/Hero/Bocchi_the_Rock%21_Character_Key_Visual_Collection.webp" alt="">
+                                    <img src="Assets/img/Hero/BocchiTheRock.webp" alt="">
                                     <p>Hello and welcome to Bocchi the Rock! Wiki! A wiki dedicated to everything about the anime and manga series, Bocchi the Rock! that anyone can edit. Please help us by creating or editing any of our articles!</p>
                                     <hr color="white">
 
@@ -180,14 +179,14 @@
 
                         <li class="Hitori">
                             <a href="">
-                                <img src="Assets\img\Karakter\Hitori_Gotoh_Profile.webp" alt="">
+                                <img src="Assets/img/Karakter/Hitori_Gotoh_Profile.webp" alt="">
                                 <p>Hitori Gotoh</p>
                             </a>
                         </li>
 
                         <li class="Nijika">
                             <a href="">
-                                <img src="Assets\img\Karakter\Nijika_Ijichi_Profile.webp" alt="">
+                                <img src="Assets/img/Karakter/Nijika_Ijichi_Profile.webp" alt="">
                                 <p>Nijika Ijichi</p>
                             </a>
                         </li>
@@ -195,14 +194,14 @@
 
                         <li class="Ryo">
                             <a href="">
-                                <img src="Assets\img\Karakter\Ryo_Yamada_Profile.webp" alt="">
+                                <img src="Assets/img/Karakter/Ryo_Yamada_Profile.webp" alt="">
                                 <p>Ryo Yamada</p>
                             </a>
                         </li>
 
                         <li class="Kita">
                             <a href="">
-                                <img src="Assets\img\Karakter\Ikuyo_Kita_Profile.webp" alt="">
+                                <img src="Assets/img/Karakter/Ikuyo_Kita_Profile.webp" alt="">
                                 <p>Ikuyo Kita</p>
                             </a>
                         </li>
