--- a/index.html
+++ b/index.html
@@ -162,55 +162,60 @@
                                 </div>
                             </div>
                         <!-- Hero END -->
-                    </div>
-                <!-- Parent-Container END -->
+
+
+                        <!-- Characters START -->
+                        <div class="karakter">
+                            <div class="container">
+                                <div class="flex">
+
+
+
+                                    <h2>Characters</h2>
+                                    <hr color="purple">
+
+                                    <ul>
+
+                                        <li class="Hitori">
+                                            <a href="">
+                                                <img src="Assets/img/Karakter/Hitori_Gotoh_Profile.webp" alt="">
+                                                <p>Hitori Gotoh</p>
+                                            </a>
+                                        </li>
+
+                                        <li class="Nijika">
+                                            <a href="">
+                                                <img src="Assets/img/Karakter/Nijika_Ijichi_Profile.webp" alt="">
+                                                <p>Nijika Ijichi</p>
+                                            </a>
+                                        </li>
+
+
+                                        <li class="Ryo">
+                                            <a href="">
+                                                <img src="Assets/img/Karakter/Ryo_Yamada_Profile.webp" alt="">
+                                                <p>Ryo Yamada</p>
+                                            </a>
+                                        </li>
+
+                                        <li class="Kita">
+                                            <a href="">
+                                                <img src="Assets/img/Karakter/Ikuyo_Kita_Profile.webp" alt="">
+                                                <p>Ikuyo Kita</p>
+                                            </a>
+                                        </li>
+
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Characters END -->
+
             </div>
+            <!-- Parent-Container END -->
+        </div>
         <!-- Parent END -->
 
-
-        <!-- Characters START -->
-        <div class="karakter">
-            <div class="container">
-                <div class="flex">
-
-
-                    <h2>Characters</h2>
-                    <ul>
-
-                        <li class="Hitori">
-                            <a href="">
-                                <img src="Assets/img/Karakter/Hitori_Gotoh_Profile.webp" alt="">
-                                <p>Hitori Gotoh</p>
-                            </a>
-                        </li>
-
-                        <li class="Nijika">
-                            <a href="">
-                                <img src="Assets/img/Karakter/Nijika_Ijichi_Profile.webp" alt="">
-                                <p>Nijika Ijichi</p>
-                            </a>
-                        </li>
-
-
-                        <li class="Ryo">
-                            <a href="">
-                                <img src="Assets/img/Karakter/Ryo_Yamada_Profile.webp" alt="">
-                                <p>Ryo Yamada</p>
-                            </a>
-                        </li>
-
-                        <li class="Kita">
-                            <a href="">
-                                <img src="Assets/img/Karakter/Ikuyo_Kita_Profile.webp" alt="">
-                                <p>Ikuyo Kita</p>
-                            </a>
-                        </li>
-
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <!-- Characters END -->
 
 
 
