--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
                 <ul>
                     <li>
                         <a href="" class="judul">
-                            <img src="Assets/img/Navbar/Site-logo.webp" alt="">
+                            <!-- <img src="Assets/img/Navbar/Site-logo.webp" alt=""> -->
+
+
+                            <!-- <img src="https://mir-s3-cdn-cf.behance.net/projects/404/3fd4ae203863921.Y3JvcCwxMzgwLDEwODAsMjk3LDA.jpg" alt=""> -->
+                            Bocchi the Rock!
                         </a>
                     </li>
 
                     <ul>
                         <li>
-                            <a href="" class="sub-judul">Bocchi the Rock!</a>
+                            <!-- <a href="" class="sub-judul">Bocchi the Rock!</a> -->
 
                             <!-- <ul>
                                 <li>
@@ -147,15 +151,16 @@
                         <!-- Hero START -->
                             <div class="hero">
                                 <div class="container">
-                                    <img src="Assets/img/Hero/BocchiTheRock.webp" alt="">
+                                    <h2>Welcome to Bocchi the Rock! Wiki!</h2>
+                                    <img src="Assets/img/Hero/Hero.jpg" alt="">
                                     <p>Hello and welcome to Bocchi the Rock! Wiki! A wiki dedicated to everything about the anime and manga series, Bocchi the Rock! that anyone can edit. Please help us by creating or editing any of our articles!</p>
                                     <hr color="white">
 
                                     <ul>
                                         <p>This wiki has been created on May 29, 2022.
                                             Currently, we have 6,102 edits, 134 pages, 563 images, and 14 active users on this wiki!
-                                            This wiki contains spoilers! Please read with caution at your own risk.
-                                            Please check out the rules and the Manual of Style before editing.
+                                            This wiki contains <span style="color: red;">spoilers!</span> Please read with <span style="color: red;">caution</span> at your own risk.
+                                            Please check out the <span style="color: lightseagreen">rules</span> and the <span style="color: lightseagreen">Manual of Style</span> before editing.
                                         </p>
                                     </ul>
 
@@ -216,7 +221,7 @@
         </div>
         <!-- Parent END -->
 
-
+<br><br><br><br><br>
 
 
 
