--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
                 <!-- Parent-Container START -->
                     <div class="parent-container">
 
+
+
+
+
                         <!-- Hero START -->
                             <div class="hero">
                                 <div class="container">
@@ -215,6 +219,36 @@
                             </div>
                         </div>
                         <!-- Characters END -->
+
+
+
+
+
+                        <!-- About the series START -->
+                        <div class="about">
+                            <div class="container">
+                                <h2>About the series</h2>
+                                <hr color="purple">
+                                <ul>
+                                    <li>
+                                        <p>
+                                            Bocchi the Rock! is a band comedy 4-koma manga series written and illustrated by <span style="color:lightseagreen;">Aki Hamazi</span>. The manga series serialized in Manga Time Kirara MAX by <span style="color:lightseagreen;">Houbunsha</span> since the February 2018 issue and collected five volumes in tankōbon format as of November 2022, and has an official translation by <span style="color:lightseagreen;">Yen Press</span>, which will debut on October 17, 2023. It became a popular series for its successor of <span style="color:lightseagreen;"><i>K-ON!</i></span> and ranked 8th place in the <span style="color:lightseagreen;">Next Manga Awards</span> 2019. An anime series produced by <span style="color:lightseagreen;">CloverWorks</span> and premiered from October 9 to December 25, 2022, and has two theater compilations, the first part was screened on June 7, 2024, and the second part will be screened on August 9, 2024.
+                                        </p>
+                                    </li>
+<hr color="white">
+                                    <li>
+                                        <p>
+                                            In this story, <span style="color:pink;">Hitori Gotoh</span> is a high school girl who's starting to learn to play the guitar because she dreams of being in a band, but she's so shy that she hasn't made a single friend. However, her dream might come true after she meets <span style="color:yellow;">Nijika Ijichi</span>, a girl who plays drums and is looking for a new guitarist for <span style="color:lightseagreen;">her band</span>.
+                                        </p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- About the series END -->
+
+
+
+
 
             </div>
             <!-- Parent-Container END -->
